[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/sprites/greenkeydoor.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/door_0001.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/door_0002.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/lockedoor_0005.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/lockedoor_0001.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/lockedoor_0004.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/lockedoor_0002.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/lockedoor_0003.png" type="Texture" id=8]
[ext_resource path="res://assets/scripts/greenkeydoor.gd" type="Script" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "indoor",
"speed": 12.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "locked",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 4 ) ],
"loop": false,
"name": "lockedopen",
"speed": 16.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "outdoor",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 42.5, 9.25 )

[node name="GreenDoorLocked" type="Area2D"]
collision_mask = 0
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 8, -16 )
scale = Vector2( 0.8, 0.8 )
frames = SubResource( 1 )
animation = "locked"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.5, 33.25 )
shape = SubResource( 2 )

[node name="timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_GreenDoorLocked_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_GreenDoorLocked_body_exited"]
[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
